openmpt/libopenmpt/libopenmpt.h


LIBOPENMPT_API uint32_t openmpt_quinlight_get_nativefloat_size(void);
LIBOPENMPT_API void openmpt_free_string( const char * str );
typedef void (*openmpt_log_func)( const char * message, void * user );
typedef int (*openmpt_error_func)( int error, void * user );
typedef struct openmpt_module openmpt_module;
typedef struct openmpt_module_initial_ctl {
	const char * ctl;
	const char * value;
} openmpt_module_initial_ctl;
LIBOPENMPT_API openmpt_module * openmpt_module_create_from_memory2( const void * filedata, size_t filesize, openmpt_log_func logfunc, void * loguser, openmpt_error_func errfunc, void * erruser, int * error, const char * * error_message, const openmpt_module_initial_ctl * ctls );
LIBOPENMPT_API void openmpt_module_destroy( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_error_get_last( openmpt_module * mod );
LIBOPENMPT_API const char * openmpt_module_error_get_last_message( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_set_repeat_count( openmpt_module * mod, int32_t repeat_count );
LIBOPENMPT_API double openmpt_module_get_duration_seconds( openmpt_module * mod );
LIBOPENMPT_API double openmpt_module_set_position_seconds( openmpt_module * mod, double seconds );
LIBOPENMPT_API double openmpt_module_get_position_seconds( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_get_render_param( openmpt_module * mod, int param, int32_t * value );
LIBOPENMPT_API int openmpt_module_set_render_param( openmpt_module * mod, int param, int32_t value );
LIBOPENMPT_API size_t openmpt_module_read_interleaved_float_stereo( openmpt_module * mod, int32_t samplerate, size_t count, float * interleaved_stereo );
LIBOPENMPT_API size_t openmpt_module_read_interleaved_double_stereo( openmpt_module * mod, int32_t samplerate, size_t count, double * interleaved_stereo );
LIBOPENMPT_API const char * openmpt_module_get_metadata( openmpt_module * mod, const char * key );
LIBOPENMPT_API int32_t openmpt_module_get_current_order( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_current_pattern( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_current_row( openmpt_module * mod );
LIBOPENMPT_API double openmpt_module_get_current_channel_vu_left( openmpt_module * mod, int32_t channel );
LIBOPENMPT_API double openmpt_module_get_current_channel_vu_right( openmpt_module * mod, int32_t channel );
LIBOPENMPT_API int32_t openmpt_module_get_num_channels( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_num_orders( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_num_patterns( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_num_instruments( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_num_samples( openmpt_module * mod );
LIBOPENMPT_API const char * openmpt_module_get_instrument_name( openmpt_module * mod, int32_t index );
LIBOPENMPT_API const char * openmpt_module_get_sample_name( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_order_pattern( openmpt_module * mod, int32_t order );
LIBOPENMPT_API int32_t openmpt_module_get_pattern_num_rows( openmpt_module * mod, int32_t pattern );
LIBOPENMPT_API int32_t openmpt_module_get_pattern_rows_per_beat( openmpt_module * mod, int32_t pattern );
LIBOPENMPT_API uint8_t openmpt_module_get_pattern_row_channel_command( openmpt_module * mod, int32_t pattern, int32_t row, int32_t channel, int command );
LIBOPENMPT_API int32_t openmpt_module_get_sample_rate( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int64_t openmpt_module_get_sample_length_frames( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_sample_channels( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_instrument_keyboard_sample( openmpt_module * mod, int32_t instrument_index, int32_t note );
LIBOPENMPT_API int64_t openmpt_module_read_sample_data( openmpt_module * mod, int32_t index, double * buffer, int64_t buffer_frames );
LIBOPENMPT_API int openmpt_module_replace_sample_data( openmpt_module * mod, int32_t index, const double * data, int64_t length_frames, int32_t channels, int32_t new_sample_rate );
LIBOPENMPT_API int openmpt_module_replace_sample_data_raw( openmpt_module * mod, int32_t index, const double * data, int64_t length_frames, int32_t channels, int32_t new_sample_rate );
LIBOPENMPT_API int openmpt_module_set_sample_loop_points( openmpt_module * mod, int32_t index, int64_t loop_start, int64_t loop_end, int32_t loop_mode, int64_t sustain_start, int64_t sustain_end, int32_t sustain_mode );
LIBOPENMPT_API int openmpt_module_refresh_channels_for_sample( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int openmpt_module_get_linear_slides( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_set_linear_slides( openmpt_module * mod, int enabled );
LIBOPENMPT_API int openmpt_module_get_agc_enabled( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_set_agc_enabled( openmpt_module * mod, int enabled );
LIBOPENMPT_API int openmpt_module_get_agc_profile( openmpt_module * mod );
LIBOPENMPT_API int openmpt_module_set_agc_profile( openmpt_module * mod, int profile );
LIBOPENMPT_API int64_t openmpt_module_save_to_memory( openmpt_module * mod, void * buffer, int64_t buffer_size );
LIBOPENMPT_API int64_t openmpt_module_save_loaded_format_to_memory( openmpt_module * mod, void * buffer, int64_t buffer_size );
LIBOPENMPT_API int64_t openmpt_module_save_best_format_to_memory( openmpt_module * mod, void * buffer, int64_t buffer_size );
LIBOPENMPT_API const char * openmpt_module_get_loaded_format_extension( openmpt_module * mod );
LIBOPENMPT_API const char * openmpt_module_get_best_save_format_extension( openmpt_module * mod );
LIBOPENMPT_API int32_t openmpt_module_get_sample_bits_per_sample( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_sample_format( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int openmpt_module_has_sample_loop( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int64_t openmpt_module_get_sample_loop_start( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int64_t openmpt_module_get_sample_loop_end( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_sample_loop_mode( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int openmpt_module_has_sample_sustain_loop( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int64_t openmpt_module_get_sample_sustain_loop_start( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int64_t openmpt_module_get_sample_sustain_loop_end( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int32_t openmpt_module_get_sample_sustain_loop_mode( openmpt_module * mod, int32_t index );
LIBOPENMPT_API int openmpt_module_set_pattern_row_channel_command( openmpt_module * mod, int32_t pattern, int32_t row, int32_t channel, int command, uint8_t value );
LIBOPENMPT_API int32_t openmpt_module_get_current_channel_sample( openmpt_module * mod, int32_t channel );