src/openmpt.rs

// SPDX-License-Identifier: MIT
// Copyright (c) 2026 Kind Computers, LLC.

use std::ffi::{CStr, CString, c_char, c_double, c_float, c_int, c_void};

// Opaque type for the module handle
#[repr(C)]
pub struct OpenmptModule {
    _opaque: [u8; 0],
}

// Render parameter constants
pub const RENDER_MASTERGAIN_MILLIBEL: c_int = 1;
pub const RENDER_STEREOSEPARATION_PERCENT: c_int = 2;
pub const RENDER_INTERPOLATIONFILTER_LENGTH: c_int = 3;
pub const RENDER_VOLUMERAMPING_STRENGTH: c_int = 4;

pub const DEFAULT_STEREO_SEPARATION_PERCENT: i32 = 66;
pub const MOD_STEREO_SEPARATION_PERCENT: i32 = 66;
pub const DEFAULT_INTERPOLATION_FILTER_LENGTH: i32 = 64;

/// Format-aware stereo-separation default. Currently MOD and non-MOD share 66%,
/// but the hook is kept so Amiga-style hard panning can diverge later without
/// touching every call site.
pub fn effective_stereo_separation(path: &std::path::Path, default: i32) -> i32 {
    if path
        .extension()
        .and_then(|e| e.to_str())
        .is_some_and(|e| e.eq_ignore_ascii_case("mod"))
    {
        MOD_STEREO_SEPARATION_PERCENT
    } else {
        default
    }
}
pub const DEFAULT_VOLUMERAMPING_STRENGTH: i32 = 10;
pub const DEFAULT_AGC_ENABLED: bool = true;
pub const DEFAULT_AGC_PROFILE: AgcProfile = AgcProfile::Gentle;

const AGC_PROFILE_STOCK: c_int = 0;
const AGC_PROFILE_GENTLE: c_int = 1;
const SAMPLE_FORMAT_INT8: c_int = 0;
const SAMPLE_FORMAT_INT16: c_int = 1;
const SAMPLE_FORMAT_FLOAT32: c_int = 2;
const SAMPLE_FORMAT_FLOAT64: c_int = 3;

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum AgcProfile {
    Stock,
    Gentle,
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum SampleFormat {
    Int8,
    Int16,
    Float32,
    Float64,
}

impl SampleFormat {
    pub fn label(self) -> &'static str {
        match self {
            Self::Int8 => "8",
            Self::Int16 => "16",
            Self::Float32 => "32f",
            Self::Float64 => "64f",
        }
    }
}

// Initial ctl struct for module creation
#[repr(C)]
pub struct OpenmptModuleInitialCtl {
    pub ctl: *const c_char,
    pub value: *const c_char,
}

type LogFunc = Option<unsafe extern "C" fn(*const c_char, *mut c_void)>;
type ErrFunc = Option<unsafe extern "C" fn(c_int, *mut c_void) -> c_int>;

#[link(name = "openmpt", kind = "static")]
#[link(name = "stdc++")]
#[allow(dead_code)]
unsafe extern "C" {
    fn openmpt_free_string(str: *const c_char);

    fn openmpt_module_create_from_memory2(
        filedata: *const c_void,
        filesize: usize,
        logfunc: LogFunc,
        loguser: *mut c_void,
        errfunc: ErrFunc,
        erruser: *mut c_void,
        error: *mut c_int,
        error_message: *mut *const c_char,
        ctls: *const OpenmptModuleInitialCtl,
    ) -> *mut OpenmptModule;

    fn openmpt_module_destroy(module: *mut OpenmptModule);

    // Rendering
    fn openmpt_module_read_interleaved_float_stereo(
        module: *mut OpenmptModule,
        samplerate: i32,
        count: usize,
        interleaved_stereo: *mut c_float,
    ) -> usize;

    fn openmpt_module_read_interleaved_double_stereo(
        module: *mut OpenmptModule,
        samplerate: i32,
        count: usize,
        interleaved_stereo: *mut c_double,
    ) -> usize;

    // Metadata
    fn openmpt_module_get_metadata(module: *mut OpenmptModule, key: *const c_char)
    -> *const c_char;
    #[cfg(test)]
    fn openmpt_quinlight_get_nativefloat_size() -> u32;
    fn openmpt_module_get_duration_seconds(module: *mut OpenmptModule) -> f64;
    #[cfg(test)]
    fn openmpt_module_error_get_last(module: *mut OpenmptModule) -> c_int;
    #[cfg(test)]
    fn openmpt_module_error_get_last_message(module: *mut OpenmptModule) -> *const c_char;
    fn openmpt_module_get_num_channels(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_num_orders(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_num_patterns(module: *mut OpenmptModule) -> i32;
    #[allow(dead_code)]
    fn openmpt_module_get_order_pattern(module: *mut OpenmptModule, order: i32) -> i32;
    fn openmpt_module_get_num_instruments(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_num_samples(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_sample_name(module: *mut OpenmptModule, index: i32) -> *const c_char;
    fn openmpt_module_get_instrument_name(module: *mut OpenmptModule, index: i32) -> *const c_char;

    // Playback control
    fn openmpt_module_get_position_seconds(module: *mut OpenmptModule) -> f64;
    fn openmpt_module_set_position_seconds(module: *mut OpenmptModule, seconds: f64) -> f64;
    fn openmpt_module_get_current_order(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_current_row(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_get_current_pattern(module: *mut OpenmptModule) -> i32;
    fn openmpt_module_set_repeat_count(module: *mut OpenmptModule, repeat_count: i32) -> c_int;
    fn openmpt_module_set_render_param(
        module: *mut OpenmptModule,
        param: c_int,
        value: i32,
    ) -> c_int;
    fn openmpt_module_get_render_param(
        module: *mut OpenmptModule,
        param: c_int,
        value: *mut i32,
    ) -> c_int;
    #[cfg(test)]
    fn openmpt_module_set_test_preamp(module: *mut OpenmptModule, preamp: i32) -> c_int;

    // VU metering
    fn openmpt_module_get_current_channel_vu_left(
        module: *mut OpenmptModule,
        channel: i32,
    ) -> c_double;
    fn openmpt_module_get_current_channel_vu_right(
        module: *mut OpenmptModule,
        channel: i32,
    ) -> c_double;

    // Quinlight sample data extensions
    fn openmpt_module_get_sample_rate(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_length_frames(module: *mut OpenmptModule, index: i32) -> i64;
    fn openmpt_module_get_sample_channels(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_c5_speed(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_relative_tone(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_fine_tune(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_default_volume(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_has_sample_default_pan(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_default_pan(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_instrument_keyboard_sample(
        module: *mut OpenmptModule,
        instrument_index: i32,
        note: i32,
    ) -> i32;
    fn openmpt_module_read_sample_data(
        module: *mut OpenmptModule,
        index: i32,
        buffer: *mut c_double,
        buffer_frames: i64,
    ) -> i64;
    fn openmpt_module_replace_sample_data(
        module: *mut OpenmptModule,
        index: i32,
        data: *const c_double,
        length_frames: i64,
        channels: i32,
        new_sample_rate: i32,
    ) -> c_int;
    fn openmpt_module_replace_sample_data_raw(
        module: *mut OpenmptModule,
        index: i32,
        data: *const c_double,
        length_frames: i64,
        channels: i32,
        new_sample_rate: i32,
    ) -> c_int;
    fn openmpt_module_set_sample_loop_points(
        module: *mut OpenmptModule,
        index: i32,
        loop_start: i64,
        loop_end: i64,
        loop_mode: i32,
        sustain_start: i64,
        sustain_end: i64,
        sustain_mode: i32,
    ) -> c_int;
    fn openmpt_module_refresh_channels_for_sample(module: *mut OpenmptModule, index: i32) -> c_int;
    fn openmpt_module_get_linear_slides(module: *mut OpenmptModule) -> c_int;
    fn openmpt_module_set_linear_slides(module: *mut OpenmptModule, enabled: c_int) -> c_int;
    fn openmpt_module_get_agc_enabled(module: *mut OpenmptModule) -> c_int;
    fn openmpt_module_set_agc_enabled(module: *mut OpenmptModule, enabled: c_int) -> c_int;
    fn openmpt_module_get_agc_profile(module: *mut OpenmptModule) -> c_int;
    fn openmpt_module_set_agc_profile(module: *mut OpenmptModule, profile: c_int) -> c_int;
    fn openmpt_module_get_sample_bits_per_sample(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_sample_format(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_has_sample_loop(module: *mut OpenmptModule, index: i32) -> c_int;
    fn openmpt_module_get_sample_loop_start(module: *mut OpenmptModule, index: i32) -> i64;
    fn openmpt_module_get_sample_loop_end(module: *mut OpenmptModule, index: i32) -> i64;
    fn openmpt_module_get_sample_loop_mode(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_has_sample_sustain_loop(module: *mut OpenmptModule, index: i32) -> c_int;
    fn openmpt_module_get_sample_sustain_loop_start(module: *mut OpenmptModule, index: i32) -> i64;
    fn openmpt_module_get_sample_sustain_loop_end(module: *mut OpenmptModule, index: i32) -> i64;
    fn openmpt_module_get_sample_sustain_loop_mode(module: *mut OpenmptModule, index: i32) -> i32;
    fn openmpt_module_get_pattern_num_rows(module: *mut OpenmptModule, pattern: i32) -> i32;
    fn openmpt_module_get_pattern_rows_per_beat(module: *mut OpenmptModule, pattern: i32) -> i32;
    fn openmpt_module_get_pattern_row_channel_command(
        module: *mut OpenmptModule,
        pattern: i32,
        row: i32,
        channel: i32,
        command: c_int,
    ) -> u8;
    fn openmpt_module_set_pattern_row_channel_command(
        module: *mut OpenmptModule,
        pattern: i32,
        row: i32,
        channel: i32,
        command: c_int,
        value: u8,
    ) -> c_int;
    fn openmpt_module_get_current_channel_sample(module: *mut OpenmptModule, channel: i32) -> i32;
    #[allow(dead_code)]
    fn openmpt_module_save_to_memory(
        module: *mut OpenmptModule,
        buffer: *mut u8,
        buffer_size: i64,
    ) -> i64;
    fn openmpt_module_save_loaded_format_to_memory(
        module: *mut OpenmptModule,
        buffer: *mut u8,
        buffer_size: i64,
    ) -> i64;
    fn openmpt_module_save_best_format_to_memory(
        module: *mut OpenmptModule,
        buffer: *mut u8,
        buffer_size: i64,
    ) -> i64;
    fn openmpt_module_get_loaded_format_extension(module: *mut OpenmptModule) -> *const c_char;
    fn openmpt_module_get_best_save_format_extension(module: *mut OpenmptModule) -> *const c_char;
